--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 
 <body>
-    <nav>
-        <div>
-            <h2>FISHEYE</h2>
+    <nav class="topBar">
+        <div class="topBar__brand">
+            <h3>FISHEYE</h3>
         </div>
-        <div>
+        <div class="topBar__items">
             <ul>
                 <li class="btnLabel">
                     #itemNav
@@ -33,8 +33,8 @@
                 </li>
             </ul>
         </div>
-        <div>
-            <h2>Nos photographes</h2>
+        <div class="topBar__title">
+            <h3>Nos photographes</h3>
         </div>
     </nav>
     <main>
@@ -66,7 +66,13 @@
                 <span class="photographer__info-country">Auckland, New Zealand</span>
                 <span class="photographer__info-tagline">Voir le beau blablabla...</span>
                 <span class="photographer__info-price">400€/jour</span>
-                <span class="btnLabel">#tag-Name</span>
+                <div class="photographer__info-labels">
+                    <span class="btnLabel">#tag-Name</span>
+                    <span class="btnLabel">#tag-Name</span>
+                    <span class="btnLabel">#tag-Name</span>
+                    <span class="btnLabel">#tag-Name</span>
+                </div>
+            
             </div>
             </div>
             <div class="photographer">
