--- a/photographer.html
+++ b/photographer.html
@@ -13,12 +13,12 @@
 </head>
 
 <body>
-  
+    <main class="containerPhotographerSelected">
+        <div class="containerPhotographerSelected__brand">
             <a href="/">
                 <h2>FISHEYE</h2>
             </a>
-   
-    <main class="containerPhotographerSelected">
+        </div>
         <div class="photographerBanner">
             <div class="photographerBanner__info">
                 <div class="photographerBanner__info-name">
@@ -27,7 +27,10 @@
                 </div>
                 <span class="photographerBanner__info-country">Auckland, New Zealand</span>
                 <span class="photographerBanner__info-tagline">Photographe et réalisateur</span>
-                <div>
+                <div class="photographerBanner__info-labels">
+                    <span class="btnLabel">#tag-name</span>
+                    <span class="btnLabel">#tag-name</span>
+                    <span class="btnLabel">#tag-name</span>
                     <span class="btnLabel">#tag-name</span>
                 </div>
             </div>
@@ -56,7 +59,7 @@
         <div class="containerPhotographerSelected__imgs">
             <div class="picture">
                 <div class="picture__img">
-                    <img src="https://cdn.pixabay.com/photo/2020/11/24/10/00/city-5772040__340.jpg" alt="">
+                    <img src="https://cdn.pixabay.com/photo/2021/03/20/10/26/field-6109500__340.jpg" alt="">
                 </div>
                 <div class="picture__info">
                     <span class="picture__info-name">Photo</span>
@@ -70,7 +73,7 @@
                     </div>
                 </div>
             </div>
-            <div class="picture">
+             <div class="picture">
                 <div class="picture__img">
                     <img src="https://cdn.pixabay.com/photo/2020/11/24/10/00/city-5772040__340.jpg" alt="">
                 </div>
@@ -152,6 +155,19 @@
             </div>
         </div>
     </main>
+    <div class="stickyBanner">
+        <div class="stickyBanner__like">
+            <p class="mr-2">298 045</p>
+            <i class="fas fa-heart"></i>
+        </div>
+        <div class="stickyBanner__price">
+            <p>300€</p>
+            <p> / jour</p>
+        </div>
+    </div>
+    <div class="stickyBtn">
+        <button class="btn">Contatez moi</button>
+    </div>
 </body>
 
 </html>
