--- a/index.html
+++ b/index.html
@@ -140,23 +140,14 @@
         </div>
         </div>
     </main>
-    <div class="bgGround">
+    <!-- <div class="bgGround">
         <div class="modal">
-            <div class="modal__form">
+            <span class="modal__close"><i class="fas fa-times"></i></span>
+            <div class="modal__content">
                 <h2>Ici une modal</h2>
-                <form action="">
-                    <input type="text">
-                    <input type="text">
-                    <input type="text">
-                </form>
-                <form action="">
-                    <input type="text">
-                    <input type="text">
-                    <input type="text">
-                </form>
             </div>
         </div>
-    </div>
+    </div> -->
     
 
     <script type="text/javascript" src="main.js" charset="utf-8"></script>
