edit photgrapher html/css

--- a/photographer.html
+++ b/photographer.html
@@ -29,10 +29,10 @@
       <main>
         <div class="photographerBanner">
           <div class="photographerBanner__info">
-            <div class="photographerBanner__info-name">
-              <header>
+            <div class="photographerBanner__info-name ">
+              <!-- <header> -->
                 <h1 class="mr-3">Kold Barkley</h1>
-              </header>
+              <!-- </header> -->
               <button
                 class="btn modalOpenForm"
                 role="Contact me"
@@ -82,10 +82,10 @@
         <div class="containerPhotographerSelected__imgs">
           <div class="picture">
             <div
-              class="picture__img modalOpenPicture"
+              class="picture__img "
               role="namePicture, close up view"
             >
-              <img
+              <img class="modalOpenPicture"
                 src="https://cdn.pixabay.com/photo/2021/03/20/10/26/field-6109500__340.jpg"
                 alt=""
               />
@@ -270,8 +270,8 @@
         <p>/ jour</p>
       </div>
     </div>
-    <div class="stickyBtn modalOpenForm">
-      <button class="btn">Contatez moi</button>
+    <div class="stickyBtn ">
+      <button class="btn modalOpenForm">Contatez moi</button>
     </div>
     <!-- SCRIPT -->
     <script type="text/javascript" src="main.js" charset="utf-8"></script>
