Add assets, create function in Homepage and Photographer

--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
             </div>
         </div> 
     </main>
- 
+    
+
+    <!-- OTHER JS -->
     <script type="text/javascript" src="main.js" charset="utf-8"></script>
 </body>
 </html>
