add script modal.js, create item photographer and clean main.js

--- a/photographer.html
+++ b/photographer.html
@@ -274,6 +274,7 @@
       <button class="btn modalOpenForm">Contatez moi</button>
     </div>
     <!-- SCRIPT -->
+    <script  type="text/javascript" src="./js/modal.js" charset="utf-8"></script>
     <script type="text/javascript" src="main.js" charset="utf-8"></script>
   </body>
 </html>
