add tags photographer

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-     <div class="text-center btnStickyTop ">
+     <!-- <div class="text-center btnStickyTop ">
         <button class="btn mt-2">Passer au contenu</button>
-    </div>
+    </div> -->
     <nav class="topBar">
         <div class="topBar__brand">
             <img src="https://nsa40.casimages.com/img/2021/04/05/210405122303696675.png" alt="Fisheye Home page">
