--- a/index.html
+++ b/index.html
@@ -13,28 +13,15 @@
 </head>
 
 <body>
-     <!-- <div class="text-center btnStickyTop ">
+     <div class="text-center btnStickyTop ">
         <button class="btn mt-2">Passer au contenu</button>
-    </div> -->
+    </div>
     <nav class="topBar">
         <div class="topBar__brand">
             <img src="https://nsa40.casimages.com/img/2021/04/05/210405122303696675.png" alt="Fisheye Home page">
         </div>
         <div class="topBar__items">
-            <ul>
-                <li>
-                    <span class="btnLabel" role="Tagname">#itemNav</span>
-                </li>
-                <li>
-                    <span class="btnLabel" role="Tagname">#itemNav</span>
-                </li>
-                <li>
-                    <span class="btnLabel" role="Tagname">#itemNav</span>
-                </li>
-                <li>
-                    <span class="btnLabel" role="Tagname">#itemNav</span>
-                </li>
-            </ul>
+            <ul></ul>
         </div>
         <div class="topBar__title">
             <h1>Nos photographes</h1>
@@ -45,6 +32,7 @@
     </main>
     <!-- OTHER JS -->
     <script type="text/javascript" src="main.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/photographers.js" charset="utf-8"></script>
 </body>
 </html>  
 
