--- a/photographer.html
+++ b/photographer.html
@@ -27,6 +27,8 @@
         </div>
       </header>
       <main>
+        <div id="result"></div>
+        <!--  -->
         <div class="photographerBanner">
           <div class="photographerBanner__info">
             <div class="photographerBanner__info-name ">
@@ -274,7 +276,7 @@
       <button class="btn modalOpenForm">Contatez moi</button>
     </div>
     <!-- SCRIPT -->
+    <script type="text/javascript" src="/js/photographer.js" charset="utf-8"></script>
     <script  type="text/javascript" src="./js/modal.js" charset="utf-8"></script>
-    <script type="text/javascript" src="main.js" charset="utf-8"></script>
   </body>
 </html>
