create picture items + totalLikes

--- a/photographer.html
+++ b/photographer.html
@@ -68,7 +68,7 @@
           </div>
         </div>
         <div class="containerPhotographerSelected__imgs">
-          <div class="picture">
+        <!--   <div class="picture">
             <div
               class="picture__img "
               role="namePicture, close up view"
@@ -89,102 +89,7 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="picture">
-            <div class="picture__img">
-              <img
-                src="https://cdn.pixabay.com/photo/2020/11/24/10/00/city-5772040__340.jpg"
-                alt=""
-              />
-            </div>
-            <div class="picture__info">
-              <span class="picture__info-name">Photo</span>
-              <div class="picture__info-info">
-                <div class="mr-2">
-                  <p>70 €</p>
-                </div>
-                <div>
-                  <p>12 <i class="fas fa-heart"></i></p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="picture">
-            <div class="picture__img">
-              <img
-                src="https://cdn.pixabay.com/photo/2020/11/24/10/00/city-5772040__340.jpg"
-                alt=""
-              />
-            </div>
-            <div class="picture__info">
-              <span class="picture__info-name">Photo</span>
-              <div class="picture__info-info">
-                <div class="mr-2">
-                  <p>70 €</p>
-                </div>
-                <div>
-                  <p>12 <i class="fas fa-heart"></i></p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="picture">
-            <div class="picture__img">
-              <img
-                src="https://cdn.pixabay.com/photo/2020/11/24/10/00/city-5772040__340.jpg"
-                alt=""
-              />
-            </div>
-            <div class="picture__info">
-              <span class="picture__info-name">Photo</span>
-              <div class="picture__info-info">
-                <div class="mr-2">
-                  <p>70 €</p>
-                </div>
-                <div>
-                  <p>12 <i class="fas fa-heart"></i></p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="picture">
-            <div class="picture__img">
-              <img
-                src="https://cdn.pixabay.com/photo/2020/11/24/10/00/city-5772040__340.jpg"
-                alt=""
-              />
-            </div>
-            <div class="picture__info">
-              <span class="picture__info-name">Photo</span>
-              <div class="picture__info-info">
-                <div class="mr-2">
-                  <p>70 €</p>
-                </div>
-                <div>
-                  <p>12 <i class="fas fa-heart"></i></p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="picture">
-            <div class="picture__img">
-              <img
-                src="https://cdn.pixabay.com/photo/2020/11/24/10/00/city-5772040__340.jpg"
-                alt=""
-              />
-            </div>
-            <div class="picture__info">
-              <span class="picture__info-name">Photo</span>
-              <div class="picture__info-info">
-                <div class="mr-2">
-                  <p>70 €</p>
-                </div>
-                <div>
-                  <p>12 <i class="fas fa-heart"></i></p>
-                </div>
-              </div>
-            </div>
-          </div>
+          </div> -->
         </div>
       </main>
     </div>
@@ -250,7 +155,8 @@
     </div>
     <div class="stickyBanner">
       <div class="stickyBanner__like">
-        <p class="mr-2">298 045</p>
+        <p></p>
+        <!-- <p class="mr-2">298 045</p> -->
         <i class="fas fa-heart"></i>
       </div>
       <div class="stickyBanner__price">
