--- a/photographer.html
+++ b/photographer.html
@@ -53,9 +53,12 @@
           <div class="mr-2">
             <p>Trier par</p>
           </div>
+          <button class="pop">pop</button>
+          <button class="date">date</button>
+          <button class="name">name</button>
           <div class="dropDown">
             <button class="dropDown__btn">
-              <div class="dropDown__btn-main">
+              <div class="dropDown__btn-main popularite">
                 <p class="mr-2">Popularité</p>
                 <i class="fas fa-chevron-down"></i
                 ><i class="fas fa-chevron-up"></i>
@@ -167,7 +170,9 @@
       <button class="btn modalOpenForm">Contatez moi</button>
     </div>
     <!-- SCRIPT -->
-    <script type="text/javascript" src="/js/photographer.js" charset="utf-8"></script>
-    <script  type="text/javascript" src="./js/modal.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/js/models/photographer.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/js/models/media.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/js/pagePhotographer.js" charset="utf-8"></script>
+    <script  type="text/javascript" src="./js/modal/modal.js" charset="utf-8"></script>
   </body>
 </html>
