big edit (slider, modal)

--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
             <img src="https://nsa40.casimages.com/img/2021/04/05/210405122303696675.png" alt="Fisheye Home page">
         </div>
         <div class="topBar__items">
-            <ul></ul>
+            <ul>
+                <li>ICI les tags</li>
+                <li>ICI les tags</li>
+                <li>ICI les tags</li>
+                <li>ICI les tags</li>
+            </ul>
         </div>
         <div class="topBar__title">
             <h1>Nos photographes</h1>
