--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
         </div>
         <div class="topBar__items">
             <ul>
-                <li>ICI les tags</li>
-                <li>ICI les tags</li>
-                <li>ICI les tags</li>
-                <li>ICI les tags</li>
+                <!-- here : template tag -->
             </ul>
         </div>
         <div class="topBar__title">
