--- a/photographer.html
+++ b/photographer.html
@@ -176,7 +176,7 @@
     </div>
     <div class="stickyBanner">
       <div class="stickyBanner__like">
-        <p></p>
+        <p class="mr-2"></p>
         <i class="fas fa-heart"></i>
       </div>
       <div class="stickyBanner__price">
@@ -189,7 +189,7 @@
     <!-- SCRIPT -->
     <script type="text/javascript" src="/js/models/photographer.js" charset="utf-8"></script>
     <script type="text/javascript" src="/js/models/media.js" charset="utf-8"></script>
-    <script type="text/javascript" src="/js/pagePhotographer.js" charset="utf-8"></script>
     <script  type="text/javascript" src="./js/modal/modal.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/js/pagePhotographer.js" charset="utf-8"></script>
   </body>
 </html>
