renew structure JS poo

--- a/index.html
+++ b/index.html
@@ -27,14 +27,17 @@
         </div>
         <div class="topBar__title">
             <h1>Nos photographes</h1>
+           
         </div>
     </nav>
     <main>
         <div class="photographers"></div>
     </main>
     <!-- OTHER JS -->
-    <script type="text/javascript" src="js/models/photographer.js" charset="utf-8"></script>
-    <script type="text/javascript" src="js/homepage.js" charset="utf-8"></script>
-    <script type="text/javascript" src="main.js" charset="utf-8"></script>
+    <script type="text/javascript" src="main.js" charset="utf-8" async></script>
+    <script type="text/javascript" src="js/models/photographer.js" charset="utf-8" async></script>
+    <script type="text/javascript"src="js/models/photographers.js" charset="utf-8" async></script>
+    <script type="text/javascript" src="js/homepage.js" charset="utf-8" async></script>
+   
 </body>
 </html>
