--- a/photographer.html
+++ b/photographer.html
@@ -68,6 +68,7 @@
                 <div class="item" role="option">Date</div>
                 <div class="item" role="option">Titre</div>
               </div>
+             
             </button>
           </div>
         </div>
@@ -187,9 +188,13 @@
       <button class="btn modalOpenForm">Contatez moi</button>
     </div>
     <!-- SCRIPT -->
+    
     <script type="text/javascript" src="/js/models/photographer.js" charset="utf-8"></script>
-    <script type="text/javascript" src="/js/models/media.js" charset="utf-8"></script>
-    <script  type="text/javascript" src="./js/modal/modal.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/js/models/photographers.js" charset="utf-8"></script>
     <script type="text/javascript" src="/js/pagePhotographer.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/js/models/media.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/js/models/medias.js" charset="utf-8"></script>
+    <script  type="text/javascript" src="./js/modal/modal.js" charset="utf-8"></script>
+  
   </body>
 </html>
