--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </nav>
     <main>
         <div class="photographers"></div>
+        <div class="photographer"></div>
     </main>
     <!-- OTHER JS -->
     <script type="text/javascript" src="main.js" charset="utf-8" async></script>
