a lot of modification

--- a/index.html
+++ b/index.html
@@ -14,30 +14,36 @@
 
 <body>
     <div class="text-center btnStickyTop ">
-        <button class="btn mt-2">Passer au contenu</button>
+        <a href="#main">
+            <button class="btn  mt-2">Passer au contenu</button>
+        </a>
     </div>
-    <nav class="topBar">
-        <div class="topBar__brand">
-            <img src="https://nsa40.casimages.com/img/2021/04/05/210405122303696675.png" alt="Fisheye Home page">
+    <header>
+        <nav class="topBar">
+            <div class="topBar__brand">
+                <a href="/">
+                    <img src="https://nsa40.casimages.com/img/2021/04/05/210405122303696675.png" alt="Fisheye Home page">
+                </a>
+            </div>
+            <div class="topBar__items">
+                <ul>
+                    <!-- here : template tag -->
+                </ul>
+            </div>
+            <div class="topBar__title">
+                <h1>Nos photographes</h1>
+            </div>
+        </nav>
+    </header>
+    <main id="main"></main>
+        <div class="photographers">
+            <!-- here : template photographer -->
         </div>
-        <div class="topBar__items">
-            <ul>
-                <!-- here : template tag -->
-            </ul>
-        </div>
-        <div class="topBar__title">
-            <h1>Nos photographes</h1>
-           
-        </div>
-    </nav>
-    <main>
-        <div class="photographers"></div>
-        <div class="photographer"></div>
     </main>
     <!-- OTHER JS -->
-    <script type="text/javascript" src="js/models/photographer.js" charset="utf-8" async></script>
-    <script type="text/javascript"src="js/models/photographers.js" charset="utf-8" async></script>
-    <script type="text/javascript" src="js/homepage.js" charset="utf-8" async></script>
-   
+    <script type="text/javascript" src="js/models/photographer.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/services/servcie.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/homepage.js" charset="utf-8"></script>
 </body>
+
 </html>
