--- a/photographer.html
+++ b/photographer.html
@@ -1,200 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <!-- Fontawesome -->
-    <script
-      src="https://kit.fontawesome.com/a13498b757.js"
-      crossorigin="anonymous"
-    ></script>
-    <!-- Css -->
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FishEye</title>
-  </head>
 
-  <body>
-    <div class="containerPhotographerSelected">
-      <header>
-        <div class="containerPhotographerSelected__brand">
-          <a href="/">
-            <img
-              src="https://nsa40.casimages.com/img/2021/04/05/210405122303696675.png"
-              alt="Fisheye Home page"
-            />
-          </a>
-        </div>
-      </header>
-      <main>
-        <div class="photographerBanner">
-          <div class="photographerBanner__info">
-            <div class="photographerBanner__info-name ">
-              <!-- <header> -->
-                <h1 class="mr-3"><!-- Kold Barkley --></h1>
-              <!-- </header> -->
-              <button
-                class="btn modalOpenForm"
-                role="Contact me"
-                aria-label="Contact me"
-              >
-                Contactez-moi
-              </button>
-            </div>
-            <span class="photographerBanner__info-country"></span>
-            <span class="photographerBanner__info-tagline"></span>
-            <div class="photographerBanner__info-labels"></div>
-          </div>
-          <div class="photographerBanner__img">
-            <img/>
-          </div>
-        </div>
-        <div class="containerPhotographerSelected__sort">
-          <div class="mr-2">
-            <p>Trier par</p>
-          </div>
-          <button class="modalOpenPicture">Carousel</button>
-          <button class="pop">pop</button>
-          <button class="date">date</button>
-          <button class="name">name</button>
-          <div class="dropDown"           >
-            <button class="dropDown__btn" aria-haspopup="listbox"  aria-expanded="true" aria-label="Order by" tabindex="0">
-              <div class="dropDown__btn-main popularite">
-                <p class="mr-2">Popularité</p>
-                <i class="fas fa-chevron-down"></i>
-                <i class="fas fa-chevron-up"></i>
-              </div>
-              <div class="dropDown__btn-content">
-                <div class="item" role="option">Date</div>
-                <div class="item" role="option">Titre</div>
-              </div>
-             
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <!-- Fontawesome -->
+  <script src="https://kit.fontawesome.com/a13498b757.js" crossorigin="anonymous"></script>
+  <!-- Css -->
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>FishEye</title>
+</head>
+
+<body>
+  <div class="containerPhotographerSelected">
+    <header>
+      <div class="containerPhotographerSelected__brand">
+        <a href="/">
+          <img src="https://nsa40.casimages.com/img/2021/04/05/210405122303696675.png" alt="Fisheye Home page" />
+        </a>
+      </div>
+    </header>
+    <main>
+      <div class="photographerBanner">
+        <div class="photographerBanner__info">
+          <div class="photographerBanner__info-name ">
+            <!-- <header> -->
+            <h1 class="mr-3">
+            </h1>
+            <!-- </header> -->
+            <button class="btn modalOpenForm" role="Contact me" aria-label="Contact me">
+              Contactez-moi
             </button>
           </div>
+          <span class="photographerBanner__info-country"></span>
+          <span class="photographerBanner__info-tagline"></span>
+          <div class="photographerBanner__info-labels"></div>
         </div>
-        <div class="containerPhotographerSelected__imgs">
-        <!--   <div class="picture">
-            <div
-              class="picture__img "
-              role="namePicture, close up view"
-            >
-              <img class="modalOpenPicture"
-                src="https://cdn.pixabay.com/photo/2021/03/20/10/26/field-6109500__340.jpg"
-                alt=""
-              />
-            </div>
-            <div class="picture__info">
-              <span class="picture__info-name">Photo</span>
-              <div class="picture__info-info">
-                <div class="mr-2">
-                  <p>70 €</p>
-                </div>
-                <div>
-                  <p>12 <i class="fas fa-heart" aria-label="likes"></i></p>
-                </div>
-              </div>
-            </div>
-          </div> -->
+        <div class="photographerBanner__img">
+          <img />
         </div>
-      </main>
-    </div>
-    <div class="bgGround">
-      <div class="modal">
-        <div class="modal__content">
-            <span class="modal__close contact" role="Close Contact form">
-                <i class="fas fa-times"></i>
-            </span>
-          <div class="modal__content-form">
-            <h2>Contactez-moi</h2>
-            <h2 class="modal__name"></h2>
-            <form class="formContact" id="">
-              <div class="formContact__item mt-2">
-                <label for="firstName" id="First name">Prénom</label>
-                <input type="text" id="firstName" role="First name" aria-labelledby="First name" />
-              </div>
-              <div class="formContact__item mt-2">
-                <label for="lastName" id="Last name">Nom</label>
-                <input type="text" id="lastName" role="Last name" aria-labelledby="Last name" />
-              </div>
-              <div class="formContact__item mt-2">
-                <label for="email" id="Email">Email</label>
-                <input type="text" id="email" role="Email"  aria-labelledby="Email"/>
-              </div>
-              <div class="formContact__item mt-2" >
-                <label for="yourMessage" id="Your message">Votre message</label>
-                <textarea
-                  name=""
-                  id="yourMessage"
-                  cols="30"
-                  rows="10"
-                  role="Your message"
-                  aria-labelledby="Your message"
-                ></textarea>
-              </div>
-              <div class="formContact__btn">
-                <button class="btn my-2" role="Send" aria-label="Send">Envoyer</button>
-              </div>
-            </form>
-          </div>
-          <div class="modal__content-picture" aria-label="image closeup view">
-                <span class="modal__close pictures" role="Close dialog">
-                    <i class="fas fa-times"></i>
-                </span>
-            <div class="carouselPictures">
-              <div class="carouselPictures__chevron" role="Previous image">
-                <i class="fas fa-chevron-left"></i>
-              </div>
-              <div class="carouselPictures__pictures" role="imageName">
-                <div class="carouselPictures__item active">
-                  <img
-                  src="https://cdn.pixabay.com/photo/2020/11/24/10/00/city-5772040__340.jpg"
-                  alt=""
-                />
+      </div>
+      <div class="containerPhotographerSelected__sort">
+        <div class="mr-2">
+          <p>Trier par</p>
+        </div>
+        <button class="pop">pop</button>
+        <button class="date">date</button>
+        <button class="name">name</button>
+        <div class="dropDown">
+          <button class="dropDown__btn" aria-haspopup="listbox" aria-expanded="true" aria-label="Order by" tabindex="0">
+            <div class="dropDown__btn-main popularite">
+              <p class="mr-2">Popularité</p>
+              <i class="fas fa-chevron-down"></i>
+              <i class="fas fa-chevron-up"></i>
+            </div>
+            <div class="dropDown__btn-content">
+              <div class="item" role="option">Date</div>
+              <div class="item" role="option">Titre</div>
+            </div>
+
+          </button>
+        </div>
+      </div>
+      <div class="containerPhotographerSelected__imgs">
+          <!-- Here : template picture -->
+      </div>
+    </main>
+  </div>
+  <div class="bgGround">
+    <div class="modal">
+      <div class="modal__content">
+        <span class="modal__close contact" role="Close Contact form">
+          <i class="fas fa-times"></i>
+        </span>
+        <div class="modal__content-form" role="dialog">
+          <h2>Contactez-moi</h2>
+          <h2 class="modal__name"></h2>
+          <form class="formContact" id="">
+            <div class="formContact__item mt-2">
+              <label for="firstName" id="First name">Prénom</label>
+              <input type="text" id="firstName" role="First name" aria-labelledby="First name" />
+            </div>
+            <div class="formContact__item mt-2">
+              <label for="lastName" id="Last name">Nom</label>
+              <input type="text" id="lastName" role="Last name" aria-labelledby="Last name" />
+            </div>
+            <div class="formContact__item mt-2">
+              <label for="email" id="Email">Email</label>
+              <input type="text" id="email" role="Email" aria-labelledby="Email" />
+            </div>
+            <div class="formContact__item mt-2">
+              <label for="yourMessage" id="Your message">Votre message</label>
+              <textarea name="" id="yourMessage" cols="30" rows="10" role="Your message"
+                aria-labelledby="Your message"></textarea>
+            </div>
+            <div class="formContact__btn">
+              <button class="btn my-2" role="Send" aria-label="Send">Envoyer</button>
+            </div>
+          </form>
+        </div>
+        <div class="modal__content-picture" aria-label="image closeup view">
+          <span class="modal__close pictures" aria-label="Close dialog">
+            <i class="fas fa-times"></i>
+          </span>
+          <div class="carouselPictures">
+            <div class="carouselPictures__chevron" role="Previous image" aria-label="Previous image" role="link">
+              <i class="fas fa-chevron-left" role="link"></i>
+            </div>
+            <div class="carouselPictures__pictures" role="imageName">
+              <!--    <div class="carouselPictures__item active">
+                <img src="https://cdn.pixabay.com/photo/2020/11/24/10/00/city-5772040__340.jpg" alt="" />
                 <p class="carouselPictures__name">NamePicture</p>
-                </div>
-                <div class="carouselPictures__item ">
-                  <img
-                  src="https://cdn.pixabay.com/photo/2021/07/07/13/51/palm-6394391__340.jpg"
-                  alt=""
-                />
-                <p class="carouselPictures__name">NamePicture</p>
-                </div>
-                <div class="carouselPictures__item">
-                  <img
-                  src="https://cdn.pixabay.com/photo/2021/07/17/23/01/dog-6474269__340.jpg"
-                  alt=""
-                />
-                <p class="carouselPictures__name">NamePicture</p>
-                </div>
               </div>
-              <div class="carouselPictures__chevron" role="Next image">
-                <i class="fas fa-chevron-right"></i>
+              <div class="carouselPictures__item ">
+                <img src="https://cdn.pixabay.com/photo/2021/07/07/13/51/palm-6394391__340.jpg" alt="" />
+                <p class="carouselPictures__name">NamePicture</p>
               </div>
+              <div class="carouselPictures__item">
+                <img src="https://cdn.pixabay.com/photo/2021/07/17/23/01/dog-6474269__340.jpg" alt="" />
+                <p class="carouselPictures__name">NamePicture</p>
+              </div> -->
+            </div>
+            <div class="carouselPictures__chevron" role="Next image" aria-label="Next image"  role="link">
+              <i class="fas fa-chevron-right"></i>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="stickyBanner">
-      <div class="stickyBanner__like">
-        <p class="mr-2"></p>
-        <i class="fas fa-heart"></i>
-      </div>
-      <div class="stickyBanner__price">
-        <p></p>
-      </div>
+  </div>
+  <div class="stickyBanner">
+    <div class="stickyBanner__like">
+      <p class="mr-2"></p>
+      <i class="fas fa-heart"></i>
     </div>
-    <div class="stickyBtn ">
-      <button class="btn modalOpenForm">Contatez moi</button>
+    <div class="stickyBanner__price">
+      <p></p>
     </div>
-    <!-- SCRIPT -->
-    
-    <script type="text/javascript" src="/js/models/photographer.js" charset="utf-8"></script>
-    <script type="text/javascript" src="/js/models/photographers.js" charset="utf-8"></script>
-      <script type="text/javascript" src="/js/pagePhotographer.js" charset="utf-8"></script>
-    <script type="text/javascript" src="/js/models/media.js" charset="utf-8"></script>
-    <script type="text/javascript" src="/js/models/medias.js" charset="utf-8"></script>
-    <script  type="text/javascript" src="./js/modal/modal.js" charset="utf-8"></script>
-  
-  </body>
+  </div>
+  <div class="stickyBtn ">
+    <button class="btn modalOpenForm" aria-label="Contact-me">Contatez-moi</button>
+  </div>
+  <!-- SCRIPT -->
+  <script type="text/javascript" src="./js/modal/modal.js" charset="utf-8"></script>
+  <script type="text/javascript" src="/js/slider/slider.js" charset="utf-8"></script>
+  <script type="text/javascript" src="/js/models/media.js" charset="utf-8"></script>
+  <script type="text/javascript" src="/js/models/photographer.js" charset="utf-8"></script>
+  <script type="text/javascript" src="js/services/servcie.js" charset="utf-8"></script>
+  <script type="text/javascript" src="/js/pagePhotographer.js" charset="utf-8"></script>
+</body>
+
 </html>
