--- a/photographer.html
+++ b/photographer.html
@@ -45,19 +45,18 @@
         <div class="mr-2">
           <p>Trier par</p>
         </div>
-        <button class="pop">pop</button>
-        <button class="date">date</button>
-        <button class="name">name</button>
         <div class="dropDown">
           <button class="dropDown__btn" aria-haspopup="listbox" aria-expanded="true" aria-label="Order by" tabindex="0">
             <div class="dropDown__btn-main popularite">
-              <p class="mr-2">Popularité</p>
+              <p class="mr-2 pop">Popularité</p>
               <i class="fas fa-chevron-down"></i>
               <i class="fas fa-chevron-up"></i>
             </div>
             <div class="dropDown__btn-content">
-              <div class="item" role="option">Date</div>
-              <div class="item" role="option">Titre</div>
+             <!--  <button class="item date">Date</button>
+              <button class="item name">Titre</button> -->
+              <div class="item date" role="option">Date</div>
+              <div class="item name" role="option">Titre</div>
             </div>
 
           </button>
