slider(init, previous and next) + switch pictures => media

--- a/index.html
+++ b/index.html
@@ -19,24 +19,23 @@
         </a>
     </div>
     <header>
-        <nav class="topBar">
-            <div class="topBar__brand">
-                <a href="/">
-                    <img src="https://nsa40.casimages.com/img/2021/04/05/210405122303696675.png" alt="Fisheye Home page">
-                </a>
-            </div>
-            <div class="topBar__items">
-                <ul>
+        <div class="topBar">
+            <a class="topBar__brand" href="/" >
+                <img src="https://nsa40.casimages.com/img/2021/04/05/210405122303696675.png" alt="Fisheye Home page">
+            </a>
+            <nav class="topBar__items">
+                <!-- <ul> -->
                     <!-- here : template tag -->
-                </ul>
-            </div>
+                <!-- </ul> -->
+            </nav>
             <div class="topBar__title">
                 <h1>Nos photographes</h1>
             </div>
-        </nav>
+        </div>
     </header>
-    <main id="main"></main>
+    <main id="main">
         <div class="photographers">
+          
             <!-- here : template photographer -->
         </div>
     </main>
