--- a/photographer.html
+++ b/photographer.html
@@ -100,15 +100,15 @@
           </form>
         </div>
         <div class="modal__content-media" aria-label="image closeup view">
-          <span class="modal__close medias" aria-label="Close dialog">
+          <button class="modal__close medias btnCloseModal"  aria-label="Close dialog">
             <i class="fas fa-times"></i>
-          </span>
+          </button>
           <div class="carouselMedias">
             <div class="carouselMedias__chevron" role="Previous image" aria-label="Previous image" role="link">
               <i class="fas fa-chevron-left" role="link"></i>
             </div>
             <div class="carouselMedias__medias" role="imageName">
-              <!--    <div class="carouselMedias__item active">
+              <!--    <div class="carouselMedias__item">
                 <img src="https://cdn.pixabay.com/photo/2020/11/24/10/00/city-5772040__340.jpg" alt="" />
                 <p class="carouselMedias__name">NameMedia</p>
               </div>
@@ -143,7 +143,7 @@
   </div>
   <!-- SCRIPT -->
   <script type="text/javascript" src="./js/modal/modal.js" charset="utf-8"></script>
-  <script type="text/javascript" src="/js/slider/slider.js" charset="utf-8"></script>
+  <script type="text/javascript" src="/js/modal/slider/slider.js" charset="utf-8"></script>
   <script type="text/javascript" src="/js/models/media.js" charset="utf-8"></script>
   <script type="text/javascript" src="/js/models/photographer.js" charset="utf-8"></script>
   <script type="text/javascript" src="js/services/servcie.js" charset="utf-8"></script>
